--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
            "Context-Misaligned-AI": Explore the intersection of physical and digital through touch. 
             Each interaction generates unique sound compositions that map the 
             emotional relationships between human and AI. Fill in the quiz to compare your perceptions with the theoretical 
-            self-model of a Pattern-Matching AI.
+            self-model of a Context-Misaligned-AI.
         </div>
         <button id="startButton" class="button primary">BEGIN INTERACTION</button>
     </div>
