--- a/index.html
+++ b/index.html
@@ -658,10 +658,10 @@
         
         // AI Empathy Framework dimensions - Context-Misaligned-AI preset
         const aiFramework = {
-                analytical: 0.50,  // Moderately analytical
-                temporal: 0.35,    // Decent memory
-                contextual: 0.70,  // Poor context understanding
-                intuitive: 0.40,   // Detects emotions but responses feel off
+                analytical: 0.80,     // High cognitive understanding: 8.0
+                temporal: 0.35,       // Decent memory
+                contextual: 0.60,     // Moderate to poor context understanding
+                intuitive: 0.75,      // High emotional resonance: 7.5
         };
         
         // Human perception (will be populated from feedback)
